--- a/NECF/pom.xml
+++ b/NECF/pom.xml
@@ -46,6 +46,13 @@
 			<version>6.3.2</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/io.github.cdimascio/dotenv-java -->
+		<dependency>
+			<groupId>io.github.cdimascio</groupId>
+			<artifactId>dotenv-java</artifactId>
+			<version>3.2.0</version>
+		</dependency>
+
 		<!-- Cucumber -->
 		<dependency>
 			<groupId>io.cucumber</groupId>
@@ -142,7 +149,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.3.0</version>
 				<configuration>
-				<testFailureIgnore>true</testFailureIgnore>
+					<!--<testFailureIgnore>true</testFailureIgnore>-->
 					<suiteXmlFiles>
 						<suiteXmlFile>testng.xml</suiteXmlFile>
 					</suiteXmlFiles>
